# FreeBSD-Ports

./: LICENSE  README.md  checkport.sh  upgrade-tor-browser
AusweisApp2/: Makefile  distinfo  pkg-descr
advanced-scene-switcher/: Makefile  distinfo
amarok/: Makefile  distinfo  pkg-message  pkg-plist  pkg-plist.qt5
amarok-qt5/: Makefile
ambari/: Makefile  distinfo
onlyoffice/files/: onlyoffice.ucl.in  patch-build__tools_configure.py  patch-build__tools_scripts_base.py  patch-build__tools_scripts_build__js.py  patch-build__tools_scripts_config.py  patch-build__tools_scripts_core__common_make__common.py  patch-build__tools_scripts_deploy__desktop.py  patch-build__tools_scripts_deploy__server.py  patch-build__tools_scripts_develop_release.py  patch-build__tools_scripts_sln.py  patch-build__tools_sln.json  patch-build__tools_tools_freebsd_automate.py  patch-core_Common_3dParty_boost_boost.pri  patch-core_Common_3dParty_html_css_src_StyleProperties.cpp  patch-core_Common_3dParty_html_katana-parser_src_parser.c  patch-core_Common_3dParty_icu_icu.pri  patch-core_Common_3dParty_v8__89_v8_BUILD.gn  patch-core_Common_3dParty_v8__89_v8_build_config_BUILD.gn  patch-core_Common_3dParty_v8__89_v8_build_config_BUILDCONFIG.gn  patch-core_Common_3dParty_v8__89_v8_build_config_compiler_BUILD.gn  patch-core_Common_3dParty_v8__89_v8_build_config_compiler_compiler.gni  patch-core_Common_3dParty_v8__89_v8_build_config_features.gni  patch-core_Common_3dParty_v8__89_v8_build_config_freetype_freetype.gni  patch-core_Common_3dParty_v8__89_v8_build_config_linux_BUILD.gn  patch-core_Common_3dParty_v8__89_v8_build_config_linux_pkg-config.py  patch-core_Common_3dParty_v8__89_v8_build_config_sysroot.gni  patch-core_Common_3dParty_v8__89_v8_build_detect__host__arch.py  patch-core_Common_3dParty_v8__89_v8_build_gn__run__binary.py  patch-core_Common_3dParty_v8__89_v8_build_linux_chrome.map  patch-core_Common_3dParty_v8__89_v8_build_linux_libpci_BUILD.gn  patch-core_Common_3dParty_v8__89_v8_build_linux_unbundle_libusb.gn  patch-core_Common_3dParty_v8__89_v8_build_linux_unbundle_replace__gn__files.py  patch-core_Common_3dParty_v8__89_v8_build_toolchain_gcc__toolchain.gni  patch-core_Common_3dParty_v8__89_v8_build_toolchain_get__concurrent__links.py  patch-core_Common_3dParty_v8__89_v8_buildtools_third__party_libc++_BUILD.gn  patch-core_Common_3dParty_v8__89_v8_include_v8config.h  patch-core_Common_3dParty_v8__89_v8_src_api_api.cc  patch-core_Common_3dParty_v8__89_v8_src_base_cpu.cc  patch-core_Common_3dParty_v8__89_v8_src_base_macros.h  patch-core_Common_3dParty_v8__89_v8_src_base_platform_platform-freebsd.cc  (+58 more)
ungoogled-chromium/files/: patch-build_src_BUILD.gn  patch-build_src_base_BUILD.gn  patch-build_src_build_config_BUILD.gn  patch-build_src_build_config_BUILDCONFIG.gn  patch-build_src_build_config_compiler_BUILD.gn  patch-build_src_build_config_compiler_compiler.gni  patch-build_src_build_config_compiler_pgo_pgo.gni  patch-build_src_build_config_features.gni  patch-build_src_build_config_linux_BUILD.gn  patch-build_src_build_config_linux_pkg-config.py  patch-build_src_build_config_sysroot.gni  patch-build_src_build_gn__run__binary.py  patch-build_src_build_toolchain_linux_BUILD.gn  patch-build_src_content_common_mojo__core__library__support.cc  patch-build_src_mojo_BUILD.gn  patch-build_src_mojo_public_c_system_thunks.cc  patch-build_src_mojo_public_js_mojo__bindings__resources.grd  patch-build_src_third__party_wayland_features.gni  patch-build_src_tools_gn_build_gen.py  patch-build_src_tools_gn_src_base_files_file__posix.cc  patch-build_src_tools_gn_src_gn_version.h  patch-build_src_tools_json__schema__compiler_feature__compiler.py  patch-build_src_tools_json__schema__compiler_model.py  patch-build_src_tools_variations_fieldtrial__to__struct.py  patch-utils_patches.py
vivaldi/files/: patch-chromium_BUILD.gn  patch-chromium_base_BUILD.gn  patch-chromium_build_config_BUILD.gn  patch-chromium_build_config_BUILDCONFIG.gn  patch-chromium_build_config_compiler_BUILD.gn  patch-chromium_build_config_compiler_pgo_pgo.gni  patch-chromium_build_config_linux_BUILD.gn  patch-chromium_build_timestamp.gni  patch-chromium_build_toolchain_freebsd_BUILD.gn  patch-chromium_build_util_branding.gni  patch-chromium_build_util_version.gni  patch-chromium_services_data__decoder_BUILD.gn  patch-chromium_third__party_devtools-frontend_src_front__end_Images_BUILD.gn  patch-chromium_third__party_devtools-frontend_src_scripts_build_ninja_generate__css.gni  patch-chromium_third__party_ffmpeg_BUILD.gn  patch-chromium_third__party_ffmpeg_chromium_config_Chrome_freebsd_x64_config.asm  patch-chromium_third__party_ffmpeg_chromium_config_Chrome_freebsd_x64_config__components.h  patch-chromium_third__party_ffmpeg_chromium_config_Chrome_freebsd_x64_libavcodec_bsf__list.c  patch-chromium_third__party_ffmpeg_chromium_config_Chrome_freebsd_x64_libavcodec_codec__list.c  patch-chromium_third__party_ffmpeg_chromium_config_Chrome_freebsd_x64_libavcodec_parser__list.c  patch-chromium_third__party_ffmpeg_chromium_config_Chrome_freebsd_x64_libavformat_demuxer__list.c  patch-chromium_third__party_ffmpeg_chromium_config_Chrome_freebsd_x64_libavformat_muxer__list.c  patch-chromium_third__party_ffmpeg_chromium_config_Chrome_freebsd_x64_libavformat_protocol__list.c  patch-chromium_third__party_ffmpeg_chromium_config_Chrome_freebsd_x64_libavutil_avconfig.h  patch-chromium_third__party_ffmpeg_chromium_config_Chrome_freebsd_x64_libavutil_ffversion.h  patch-chromium_third__party_ffmpeg_libavcodec_x86_cabac.h  patch-chromium_third__party_ffmpeg_libavutil_cpu.c  patch-chromium_third__party_ffmpeg_libavutil_mem.c  patch-chromium_third__party_ffmpeg_libavutil_random__seed.c  patch-chromium_third__party_wayland_features.gni  patch-chromium_tools_gn_build_build__linux.ninja.template  patch-chromium_tools_gn_build_gen.py  patch-chromium_tools_gn_src_base_files_file__posix.cc  patch-chromium_tools_gn_src_gn_version.h  patch-chromium_tools_gn_src_util_exe__path.cc  patch-gn_config_product.gni  patch-gn_config_version.gni  patch-platform__media_source__updates.gni
(+1224 files in other folders)
