--- core/Common/3dParty/v8_89/v8/BUILD.gn.orig	2025-09-23 22:49:55 UTC
+++ core/Common/3dParty/v8_89/v8/BUILD.gn
@@ -4209,7 +4209,7 @@ v8_component("v8_libbase") {
     }
   }
 
-  if (is_linux || is_chromeos) {
+  if ((is_linux || is_chromeos) && !is_bsd) {
     sources += [
       "src/base/debug/stack_trace_posix.cc",
       "src/base/platform/platform-linux.cc",
@@ -4226,6 +4226,12 @@ v8_component("v8_libbase") {
     ]
 
     libs = [ "dl" ]
+  } else if (is_bsd) {
+    sources += [
+      "src/base/debug/stack_trace_posix.cc",
+      "src/base/platform/platform-freebsd.cc",
+    ]
+    libs = [ "rt", "execinfo" ]
   } else if (is_android) {
     if (current_toolchain == host_toolchain) {
       libs = [
@@ -4622,6 +4628,7 @@ if (v8_monolithic) {
       ":v8_libsampler",
       "//build/win:default_exe_manifest",
     ]
+    libs = ["execinfo"]
 
     configs = [ ":internal_config" ]
   }
