--- core/Common/3dParty/v8_89/v8/build/config/compiler/compiler.gni.orig	2025-09-23 22:49:55 UTC
+++ core/Common/3dParty/v8_89/v8/build/config/compiler/compiler.gni
@@ -201,7 +201,7 @@ declare_args() {
 
 declare_args() {
   # Whether to use the gold linker from binutils instead of lld or bfd.
-  use_gold = !use_lld && !(is_chromecast && is_linux &&
+  use_gold = !use_lld && !is_bsd && !(is_chromecast && is_linux &&
                            (current_cpu == "arm" || current_cpu == "mipsel")) &&
              (((is_linux || is_chromeos_lacros) &&
                (current_cpu == "x64" || current_cpu == "x86" ||
