--- core/Common/3dParty/v8_89/v8/build/config/features.gni.orig	2025-09-23 22:49:55 UTC
+++ core/Common/3dParty/v8_89/v8/build/config/features.gni
@@ -26,7 +26,7 @@ declare_args() {
   proprietary_codecs = is_chrome_branded || is_chromecast
 
   # libudev usage. This currently only affects the content layer.
-  use_udev = (is_linux || is_chromeos) && !is_chromecast
+  use_udev = (is_linux || is_chromeos) && !is_chromecast && !is_bsd
 
   use_dbus = (is_linux || is_chromeos) && !is_chromecast
 
