--- core/Common/3dParty/v8_89/v8/buildtools/third_party/libc++/BUILD.gn.orig	2025-09-23 22:49:55 UTC
+++ core/Common/3dParty/v8_89/v8/buildtools/third_party/libc++/BUILD.gn
@@ -14,7 +14,7 @@ config("config") {
     # its implementation.
     cflags += [ "-Wno-macro-redefined" ]
   } else {
-    cflags += [ "-fPIC" ]
+    cflags += [ "-fPIC", "-I%%LOCALBASE%%/include" ]
   }
 }
 
