--- build/src/build/config/linux/BUILD.gn.orig	2021-01-04 07:44:59 UTC
+++ build/src/build/config/linux/BUILD.gn
@@ -30,7 +30,7 @@ config("runtime_library") {
 
   if ((!(is_chromeos || chromeos_is_browser_only) ||
        default_toolchain != "//build/toolchain/cros:target") &&
-      (!use_custom_libcxx || current_cpu == "mipsel")) {
+      (!use_custom_libcxx || current_cpu == "mipsel") && !is_bsd) {
     libs = [ "atomic" ]
   }
 }
