--- build/src/build/toolchain/linux/BUILD.gn.orig	2021-01-15 20:20:05 UTC
+++ build/src/build/toolchain/linux/BUILD.gn
@@ -22,7 +22,6 @@ clang_toolchain("clang_arm") {
 }
 
 clang_toolchain("clang_arm64") {
-  toolprefix = "aarch64-linux-gnu-"
   toolchain_args = {
     current_cpu = "arm64"
     current_os = "linux"
