--- build/src/mojo/BUILD.gn.orig	2021-01-15 20:04:10 UTC
+++ build/src/mojo/BUILD.gn
@@ -10,7 +10,7 @@ group("mojo") {
   testonly = true
   deps = [ ":tests" ]
 
-  if (!((is_linux || is_chromeos) && current_cpu == "x86")) {
+  if (!((is_linux || is_bsd || is_chromeos) && current_cpu == "x86")) {
     deps += [ "//mojo/public" ]
   }
 
