--- build/src/third_party/wayland/features.gni.orig	2021-01-11 22:35:16 UTC
+++ build/src/third_party/wayland/features.gni
@@ -13,7 +13,7 @@ declare_args() {
       default_toolchain != "//build/toolchain/cros:target"
 
   # Path to wayland-scanner. Has effect only when the system libwayland is used.
-  assert(host_os == "linux")
+  assert(host_os == "linux" || host_os == "freebsd")
   system_wayland_scanner_path = "/usr/bin/wayland-scanner"
 
   # This may be set by Chromium packagers who do not wish to use the bundled
