--- chromium/build/timestamp.gni.orig	2022-06-06 07:10:41 UTC
+++ chromium/build/timestamp.gni
@@ -28,7 +28,7 @@ if (is_official_build) {
 # changes to keep this up to date.  (Bots run gn on each build, and for devs
 # the timestamp being 100% accurate doesn't matter.)
 # See compute_build_timestamp.py for tradeoffs for picking the timestamp.
-build_timestamp = exec_script(compute_build_timestamp,
-                              [ official_name ],
-                              "trim string",
-                              [ lastchange_file ])
+#build_timestamp = exec_script(compute_build_timestamp,
+#                              [ official_name ],
+#                              "trim string",
+#                              [ lastchange_file ])
