--- chromium/build/util/branding.gni.orig	2022-06-06 07:09:21 UTC
+++ chromium/build/util/branding.gni
@@ -23,20 +23,20 @@ _branding_dictionary_template =
     "installer_short_name = \"@PRODUCT_INSTALLER_SHORTNAME@\" " +
     "team_id = \"@MAC_TEAM_ID@\" "
 
-_result = exec_script("version.py",
-                      [
-                        "-f",
-                        rebase_path(branding_file_path, root_build_dir),
-                        "-t",
-                        _branding_dictionary_template,
-                      ],
-                      "scope",
-                      [ branding_file_path ])
+#_result = exec_script("version.py",
+#                      [
+#                        "-f",
+#                        rebase_path(branding_file_path, root_build_dir),
+#                        "-t",
+#                        _branding_dictionary_template,
+#                      ],
+#                      "scope",
+#                      [ branding_file_path ])
 
-chrome_product_full_name = _result.full_name
-chrome_product_short_name = _result.short_name
-chrome_product_installer_full_name = _result.installer_full_name
-chrome_product_installer_short_name = _result.installer_short_name
+#chrome_product_full_name = _result.full_name
+#chrome_product_short_name = _result.short_name
+#chrome_product_installer_full_name = _result.installer_full_name
+#chrome_product_installer_short_name = _result.installer_short_name
 
 if (is_mac) {
   chrome_mac_bundle_id = _result.bundle_id
