--- chromium/build/util/version.gni.orig	2022-06-05 21:42:22 UTC
+++ chromium/build/util/version.gni
@@ -75,13 +75,14 @@ _script_arguments += [
   target_os,
 ]
 
-_result = exec_script("version.py",
-                      _script_arguments,
-                      "scope",
-                      [
-                        chrome_version_file,
-                        "android_chrome_version.py",
-                      ])
+_result = 0
+#exec_script("version.py",
+#                      _script_arguments,
+#                      "scope",
+#                      [
+#                        chrome_version_file,
+#                        "android_chrome_version.py",
+#                      ])
 
 # Full version. For example "45.0.12321.0"
 chrome_version_full = _result.full
