--- gn/config/product.gni.orig	2022-06-05 20:33:28 UTC
+++ gn/config/product.gni
@@ -10,18 +10,18 @@ _vivaldi_product_kind_file = "//vivaldi/VIVALDI_PRODUC
 
 _vivaldi_release_py_path = "//vivaldi/scripts/get_preview.py"
 
-release_kind =
-    exec_script(_vivaldi_release_py_path, [ build_branch ], "trim string")
-official_product_kind_string =
-    exec_script(_vivaldi_version_py_path,
-                [
-                  "-f",
-                  rebase_path(_vivaldi_product_kind_file, root_build_dir),
-                  "-t",
-                  "@VIVALDI_PRODUCT@",
-                ],
-                "trim string",
-                [_vivaldi_product_kind_file])
+release_kind = "final"
+#    exec_script(_vivaldi_release_py_path, [ build_branch ], "trim string")
+#official_product_kind_string =
+#    exec_script(_vivaldi_version_py_path,
+#                [
+#                  "-f",
+#                  rebase_path(_vivaldi_product_kind_file, root_build_dir),
+#                  "-t",
+#                  "@VIVALDI_PRODUCT@",
+#                ],
+#                "trim string",
+#                [_vivaldi_product_kind_file])
 
 if (is_vivaldi_polestar) {
   # Vivaldi/Polestar
